Adapted to recent addy-swing improvements